# BounceSpace

./: .gitignore  README.md  makefile  pyproject.toml
doc/: bits.html  bounce.html  index.html
ini/: bits.ini
lib/: bits.py  p8.py  play8.py
