[tool.poetry]
name = "Play8"
version = "9.3.0"
description = "Play8 is a container for C64-like games"
authors = [
    "Athos Toniolo"
]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "^3.9.1"
mypy = "^0.812"
black = "^21.4b1"
rope = "^0.19.0"
